2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/06_calculFloat.deca
// Description:
//    tests de programme correct,calcul float
//
// Resultats:
//    programme correct.
//
// Historique:
//    cree le 09/01/2024
{
    float x = 2.5*3;
    float y = 3.5;
    y = y*x;
    y = (y+x)/(y-x);
}